--- a/platforms/android/assets/www/templates/main.html
+++ b/platforms/android/assets/www/templates/main.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class="title">{{user.Name}}</div>
 				<div class="desc">
-					Spots found {{foundspots.length}}
+					Puzzle solved: {{foundspots.length}}
 				</div>
 				<div class="coin-info">
 					<img src="images/coin_icon1.png">
@@ -26,7 +26,7 @@
 				</li>
 				<li ng-click="onAddSpot();">
 					<img src="images/spot_icon.png">
-					<a href="javascript: void(0);">Add New Spot</a>
+					<a href="javascript: void(0);">Add Your Own Puzzle</a>
 				</li>
 				<li ng-click="onGetCoins();">
 					<img src="images/getcoin_icon.png">
