--- a/platforms/android/assets/www/templates/preload.html
+++ b/platforms/android/assets/www/templates/preload.html
@@ -4,7 +4,7 @@
 			<img class="logo" src="images/main_logo.png" />
 		</div>
 		<div ng-show="isLoadingSuccess" class="load-msg">
-			Loading Failed. Please close and run again.
-		</div>      
+			Loading Failed. Please restart Xcapade.
+		</div>
     </ion-content>
 </ion-view>
