--- a/platforms/android/assets/www/templates/home.html
+++ b/platforms/android/assets/www/templates/home.html
@@ -56,7 +56,7 @@
 			<div class="username">{{user.Name}}</div>
 		</div>
 		<div class="main-content">
-			
+
 			<div class="found-info row" align="center">
 				<div class="col"><i class="icon custom-foundspots"></i> spots found {{foundspots.length}}</div>
 				<div class="col"><i class="icon custom-foundroutes"></i> routes found {{foundroutescount}}</div>
@@ -77,7 +77,7 @@
 				</ion-item>
 			</ion-list>
 			<div class="list" ng-show="cur == 'overall'" style="padding: 20px; font-size: 15px; line-height: 30px;">
-				<span ng-if="user.rank > 0">You win over {{user.under_count / (user.total_user_count - 1) * 100 | number : 0}}% of all players</span>
+				<span ng-if="user.rank > 0">You beat {{user.under_count / (user.total_user_count - 1) * 100 | number : 0}}% of the players</span>
 				<span ng-if="user.rank <= 0">You have no rank yet.</span>
 			</div>
 
@@ -86,7 +86,7 @@
 			      <img src="{{row.Photo}}">
 			      <h2>{{row.Name}}</h2>
 			      <p>{{row.FoundSpotCount}} spots, {{row.FoundRouteCount}} routes found</p>
-			    </a>			    		    
+			    </a>
 			</div> -->
 		</div>
 	</div>
